--- a/webflux6.2/pom.xml
+++ b/webflux6.2/pom.xml
@@ -2,20 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>SpringWebFlux</artifactId>
+        <groupId>com.wuzx</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wuzx</groupId>
-    <artifactId>SpringWebFlux</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>webflux3_1</module>
-        <module>webflux6.2</module>
-    </modules>
-    <packaging>pom</packaging>
+    <artifactId>webflux6.2</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>io.reactivex.rxjava3</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>3.0.7</version>
+        </dependency>
+    </dependencies>
 
 </project>
